--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
   <h1 class="post-title">{{ page.title }}</h1>
   <div class="post-date">
     <span class="fa fa-clock-o"></span>
-    <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%b %-d %Y" }}</time>
+    <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%b %-d, %Y" }}</time>
   </div>
   {% if page.tags.size > 0 %}
     <div class="post-tags">
