--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,19 +9,20 @@
 
   <body>
 
-    <div class="container content">
-      <header class="masthead">
-        <h3 class="masthead-title">
-          <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
-        </h3>
-        <nav>
+    <div class="container">
+      <header class="masthead" role="banner">
+        <nav class="row" role="navigation">
           <ul>
+            <li class="title">
+              <h3 class="masthead-title">
+                <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
+              </h3>
+            </li>
             <li><a href="{{ site.baseurl }}/" title="Blog">Blog</a></li>
             <li><a href="{{ site.baseurl }}/about" title="About">About</a></li>
             <li><a href="{{ site.baseurl }}/contact" title="Contact">Contact</a></li>
           </ul>
         </nav>
-        
         <small>Web Dev, Mobile Strategist, Front-End Astronaut</small>
       </header>
 
