--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -26,6 +26,10 @@ body {
   text-size-adjust: 100%;
 }
 
+.fonts-loaded body {
+  font-family: $root-font-family;
+}
+
 // No `:visited` state is required by default (browsers will use `a`)
 a {
   color: $link-color;
