--- a/_sass/_share.scss
+++ b/_sass/_share.scss
@@ -16,28 +16,33 @@
 
 .fa {
   display: inline-block;
-  font: 1.25em/1 FontAwesome;
+  font: 1.5rem/1.5 FontAwesome;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: auto;
 }
 
-.channels {
-  margin: 0;
-  padding: 0;
+.social {
+  display: table;
+  margin: 0 auto;
+  
+  ul {
+    margin: 0;
+    padding: 0;
 
-  li {
-    display: inline-block;
-    list-style: none;
-    margin: 0 .5em;
-  }
-  
-  a {
-    color: inherit;
-  }
-  
-  a:hover {
-    color: $link-color;
-    text-decoration: none;
+    li {
+      display: inline-block;
+      list-style: none;
+      margin: 0 .75em;
+    }
+
+    a {
+      color: inherit;
+    }
+
+    a:hover {
+      color: $link-color;
+      text-decoration: none;
+    }
   }
 }
