--- a/_sass/_share.scss
+++ b/_sass/_share.scss
@@ -46,3 +46,11 @@
     }
   }
 }
+
+.screen-reader-text {
+  clip: rect(1px, 1px, 1px, 1px);
+  max-height: 1px;
+  max-width: 1px;
+  overflow: hidden;
+  position: absolute;
+}
