--- a/css/main.scss
+++ b/css/main.scss
@@ -7,7 +7,8 @@
 @import "variables";
 @import "base";
 @import "type";
-@import "syntax";
+//@import "syntax";
+@import "prism";
 @import "code";
 @import "layout";
 @import "masthead";
