--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -28,6 +28,6 @@ $border-color: #e5e5e5;
 $large-breakpoint: 38em;
 $large-font-size: 20px;
 
-$code-font-family: Menlo, Monaco, "Courier New", monospace;
+$code-font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
 $code-color: #905;
 $code-background-color: #f9f9f9;
