--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -2,6 +2,12 @@
 //
 // Update the foundational and global aspects of the page.
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 html,
 body {
   margin: 0;
@@ -11,7 +17,11 @@ body {
 html {
   font-size: $root-font-size;
   line-height: $root-line-height;
-
+  -webkit-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  text-size-adjust: 100%;
+  
   @media (min-width: $large-breakpoint) {
     font-size: $large-font-size;
   }
@@ -23,13 +33,7 @@ body {
   font-family: serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  margin: 0;
-  padding: 0;
   text-rendering: optimizeLegibility;
-  -webkit-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  text-size-adjust: 100%;
 }
 
 .fonts-loaded body {
