--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -91,6 +91,22 @@ blockquote {
   }
 }
 
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -.25rem;
+}
+
+sup {
+  top: -.5rem;
+}
+
 
 // Markdown footnotes
 //
