--- a/_includes/post-metadata.html
+++ b/_includes/post-metadata.html
@@ -19,11 +19,11 @@
     
       <ul>
         {% for tag in page.tags %}
-          <li><a href="/tags/{{ tag | downcase | url_encode }}">{{ tag }}</a>{% if forloop.last == false %},{% endif %}</li>
+          <li><a href="/tags/{{ tag | downcase | url_encode }}">{{ tag }}</a></li>
         {% endfor %}
         
         {% for tag in post.tags %}
-          <li><a href="/tags/{{ tag | downcase | url_encode }}">{{ tag }}</a>{% if forloop.last == false %},{% endif %}</li>
+          <li><a href="/tags/{{ tag | downcase | url_encode }}">{{ tag }}</a></li>
         {% endfor %}
       </ul>
     {% endif %}
