--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,40 +1,29 @@
 <head>
   {% if jekyll.environment == "production" %}
-  <script
-    async
-    src="https://www.googletagmanager.com/gtag/js?id={{ site.data.analytics.ga4Id }}"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.data.analytics.ga4Id }}"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() {
       dataLayer.push(arguments);
     }
     gtag("js", new Date());
-
     gtag("config", "{{ site.data.analytics.ga4Id }}");
   </script>
   {% endif %}
 
   <meta charset="utf-8" />
-  <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 
   <title>
-    {% if page.title == "Home" %}{{ site.data.org.title }} - {{
-    site.data.org.tagline }}{% else %}{{ page.title }} - {{ site.data.org.title
-    }}{% endif %}
+    {% if page.title == "Home" %}{{ site.data.org.title }} - {{ site.data.org.tagline }}{% else %}{{ page.title }} - {{
+    site.data.org.title }}{% endif %}
   </title>
-  <link
-    rel="stylesheet"
-    href="{{ site.data.org.baseurl }}/css/main.css?v={{ site.time | date: '%s' }}" />
+  <link rel="stylesheet" href="{{ site.data.org.baseurl }}/css/main.css?v={{ site.time | date: '%s' }}" />
 
   {% if page.date %}
-  <meta
-    property="article:published_time"
-    content="{{ page.date | date_to_xmlschema }}" />
+  <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}" />
   <meta property="article:author" content="{{ site.data.org.url }}/about/" />
-  {% endif %} {% if page.categories %} {% for category in page.categories
-  limit:1 %}
+  {% endif %} {% if page.categories %} {% for category in page.categories limit:1 %}
   <meta property="article:section" content="{{ category }}" />
   {% endfor %} {% endif %} {% if page.tags %} {% for tag in page.tags %}
   <meta property="article:tag" content="{{ tag }}" />
@@ -47,13 +36,9 @@
   {% else %}
   <meta property="og:url" content="{{ site.data.org.url }}" />
   {% endif %} {% if page.title %}
-  <meta
-    property="og:title"
-    content="{{ page.title }} - {{ site.data.org.title }}" />
+  <meta property="og:title" content="{{ page.title }} - {{ site.data.org.title }}" />
   {% else %}
-  <meta
-    property="og:title"
-    content="{{ site.data.org.title }} - {{ site.data.org.tagline }}" />
+  <meta property="og:title" content="{{ site.data.org.title }} - {{ site.data.org.tagline }}" />
   {% endif %}
 
   <meta
@@ -64,21 +49,13 @@
   {% else %}
   <meta property="og:description" content="{{ site.data.org.description }}" />
   {% endif %} {% if page.image %}
-  <meta
-    property="og:image"
-    content="{{ ssite.data.org.url }}/img/posts/sunset-home-office-min.jpg" />
+  <meta property="og:image" content="{{ ssite.data.org.url }}/img/posts/sunset-home-office-min.jpg" />
   {% else %}
-  <meta
-    property="og:image"
-    content="{{ site.data.org.url }}/img/posts/sunset-home-office-min.jpg" />
+  <meta property="og:image" content="{{ site.data.org.url }}/img/posts/sunset-home-office-min.jpg" />
   {% endif %} {% if page.image %}
-  <meta
-    property="twitter:image"
-    content="{{ site.data.org.url }}/img/posts/sunset-home-office-min.jpg" />
+  <meta property="twitter:image" content="{{ site.data.org.url }}/img/posts/sunset-home-office-min.jpg" />
   {% else %}
-  <meta
-    property="twitter:image"
-    content="{{ site.data.org.url }}/img/posts/sunset-home-office-min.jpg" />
+  <meta property="twitter:image" content="{{ site.data.org.url }}/img/posts/sunset-home-office-min.jpg" />
   {% endif %}
 
   <meta name="twitter:card" content="summary" />
@@ -90,35 +67,24 @@
   {% else %}
   <meta name="twitter:url" content="{{ site.data.org.url }}" />
   {% endif %} {% if page.title %}
-  <meta
-    name="twitter:title"
-    content="{{ page.title }} - {{ site.data.org.title }}" />
+  <meta name="twitter:title" content="{{ page.title }} - {{ site.data.org.title }}" />
   {% else %}
-  <meta
-    name="twitter:title"
-    content="{{ site.data.org.title }} - {{ site.data.org.tagline }}" />
+  <meta name="twitter:title" content="{{ site.data.org.title }} - {{ site.data.org.tagline }}" />
   {% endif %} {% if page.description %}
   <meta property="twitter:description" content="{{ page.description }}" />
   {% else %}
-  <meta
-    property="twitter:description"
-    content="{{ site.data.org.description }}" />
+  <meta property="twitter:description" content="{{ site.data.org.description }}" />
   {% endif %}
 
   <link
     rel="icon"
     href="{{ site.data.org.baseurl }}/img/favicon/favicon.ico?v={{ site.time | date: '%s' }}"
     sizes="any" />
-  <link
-    rel="icon"
-    href="{{ site.data.org.baseurl}}/img/favicon/favicon.svg"
-    type="image/svg+xml" />
+  <link rel="icon" href="{{ site.data.org.baseurl}}/img/favicon/favicon.svg" type="image/svg+xml" />
   <link
     rel="apple-touch-icon"
     href="{{ site.data.org.baseurl }}/img/favicon/apple-touch-icon.png?v={{ site.time | date: '%s' }}" />
-  <link
-    rel="manifest"
-    href="{{ site.data.org.baseurl }}/img/favicon//manifest.webmanifest" />
+  <link rel="manifest" href="{{ site.data.org.baseurl }}/img/favicon//manifest.webmanifest" />
   <meta name="theme-color" content="#f8f9fa" />
 
   {% for item in site.data.org.social %}
