--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -12,10 +12,17 @@
 
     a {
       color: inherit;
-      text-decoration: none;
+      -webkit-text-decoration: underline solid rgba(11, 12, 12, 0);
+      text-decoration: underline solid rgba(11, 12, 12, 0);
+      transition: -webkit-text-decoration-color var(--transition-duration);
+      transition: text-decoration-color var(--transition-duration);
+      transition: text-decoration-color var(--transition-duration),
+        -webkit-text-decoration-color var(--transition-duration);
 
       &:hover {
-        color: var(--color-primary-info-text);
+        //color: var(--color-primary-info-text);
+        -webkit-text-decoration-color: inherit;
+        text-decoration-color: inherit;
       }
     }
   }
