--- a/_sass/_tokens.scss
+++ b/_sass/_tokens.scss
@@ -2,10 +2,9 @@
 $large-breakpoint: 36rem;
 
 :root {
-  --font-root-regular: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    "Helvetica Neue", Oxygen-Sans, Ubuntu, Cantarell, sans-serif;
-  --font-tertiary-regular: SFMono-Regular, Consolas, Liberation Mono, Menlo,
-    monospace;
+  --font-root-regular: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Oxygen-Sans, Ubuntu,
+    Cantarell, sans-serif;
+  --font-tertiary-regular: SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace;
 
   --font-size-large: 1.25rem;
   --font-size-root: 1.125rem;
@@ -16,6 +15,7 @@ $large-breakpoint: 36rem;
   --transition-duration: 0.2s;
 
   --color-primary: #0b0c0c;
+  --color-primary-hexa-1: #0b0c0c00;
   --color-primary-info: #2962ff; // #0074d9;
   --color-shades-primary: #292930;
   --color-shades-primary-glare: #68778d;
