--- a/_sass/_prism.scss
+++ b/_sass/_prism.scss
@@ -33,7 +33,8 @@
 
 .token.property,
 .token.tag,
-.token.function {
+.token.function,
+.token.class-name {
   color: var(--color-syntax-quaternary);
 }
 
